--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-193.3KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-641.6KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32003, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-257.7KB/s(Youtube:不良林), server: 120.240.55.137, port: 38201, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: 120.240.55.137}}
   - {name: 🇨🇳 中国-233.4KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32001, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 台湾-1.95MB/s(Youtube:不良林), server: node-tw-c-01.texo.network, port: 8443, type: trojan, password: 91fc891c-510f-3a1b-aa77-9bee2c759522, sni: node-tw-c-01.texo.network, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-375.7KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32000, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-503.7KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34003, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇨🇳 中国-489.2KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-447.2KB/s(Youtube:不良林), server: hk-hkg-it2-svm-tr.node.inforun.work, port: 13889, type: trojan, password: uDTmEAGwuCUZXZvwhWJk, sni: hk-hkg-it2-svm-tr.node.inforun.work, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-302.6KB/s(Youtube:不良林), server: 36.134.156.5, port: 65079, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.156.5}}
   - {name: 🇺🇸 美国-301.0KB/s(Youtube:不良林), server: us-05.licom.ml, port: 12501, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: us-05.licom.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.72MB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20713, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-666.9KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇸🇬 新加坡-2.19MB/s(Youtube:不良林), server: 20.205.233.12, port: 443, type: trojan, password: 2ad895a4-90e1-460d-9291-bbfb3463190e, skip-cert-verify: true}
+  - {name: 🇨🇳 台湾-950.8KB/s(Youtube:不良林), server: hinet.52147.top, port: 443, type: trojan, password: 2ad895a4-90e1-460d-9291-bbfb3463190e, sni: hinet.52147.top, skip-cert-verify: true}
+  - {name: 卢森堡-8.23MB/s(Youtube:不良林), server: 91.243.81.248, port: 443, type: trojan, password: 2ad895a4-90e1-460d-9291-bbfb3463190e, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-2.53MB/s(Youtube:不良林), server: gzyd1.52147.top, port: 30010, type: trojan, password: 2ad895a4-90e1-460d-9291-bbfb3463190e, sni: gzyd1.52147.top, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-193.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-641.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-257.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-233.4KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.95MB/s(Youtube:不良林)
-      - 🇨🇳 中国-375.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-503.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-489.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-447.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-302.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-301.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.72MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-666.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.19MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-950.8KB/s(Youtube:不良林)
+      - 卢森堡-8.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.53MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-193.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-641.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-257.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-233.4KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.95MB/s(Youtube:不良林)
-      - 🇨🇳 中国-375.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-503.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-489.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-447.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-302.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-301.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.72MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-666.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.19MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-950.8KB/s(Youtube:不良林)
+      - 卢森堡-8.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.53MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-193.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-641.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-257.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-233.4KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.95MB/s(Youtube:不良林)
-      - 🇨🇳 中国-375.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-503.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-489.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-447.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-302.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-301.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.72MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-666.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.19MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-950.8KB/s(Youtube:不良林)
+      - 卢森堡-8.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.53MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇨🇳 台湾-1.95MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-950.8KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-193.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-641.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-257.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-233.4KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.95MB/s(Youtube:不良林)
-      - 🇨🇳 中国-375.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-503.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-489.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-447.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-302.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-301.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.72MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-666.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.19MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-950.8KB/s(Youtube:不良林)
+      - 卢森堡-8.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.53MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-193.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-641.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-257.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-233.4KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.95MB/s(Youtube:不良林)
-      - 🇨🇳 中国-375.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-503.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-489.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-447.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-302.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-301.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.72MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-666.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.19MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-950.8KB/s(Youtube:不良林)
+      - 卢森堡-8.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.53MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-193.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-641.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-257.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-233.4KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.95MB/s(Youtube:不良林)
-      - 🇨🇳 中国-375.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-503.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-489.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-447.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-302.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-301.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.72MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-666.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.19MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-950.8KB/s(Youtube:不良林)
+      - 卢森堡-8.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.53MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-193.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-641.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-257.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-233.4KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.95MB/s(Youtube:不良林)
-      - 🇨🇳 中国-375.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-503.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-489.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-447.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-302.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-301.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.72MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-666.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.19MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-950.8KB/s(Youtube:不良林)
+      - 卢森堡-8.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.53MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
