--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-368.3KB/s(Youtube:不良林), server: 120.233.150.146, port: 65073, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
-  - {name: 🇨🇳 中国-730.5KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33002, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-233.9KB/s(Youtube:不良林), server: gzyd1.52147.top, port: 30010, type: trojan, password: 2ad895a4-90e1-460d-9291-bbfb3463190e, sni: gzyd1.52147.top, skip-cert-verify: true}
   - {name: 🇨🇳 中国-676.7KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34001, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-341.4KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇨🇳 中国-485.7KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33002, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-424.5KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34001, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-885.9KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32000, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇨🇳 中国-454.8KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34001, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-944.9KB/s(Youtube:不良林), server: in-tw-2.onebox6.org, port: 38201, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-tw-2.onebox6.org}}
-  - {name: 🇨🇳 中国-4.78MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34004, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-2.05MB/s(Youtube:不良林), server: 20.205.233.12, port: 443, type: trojan, password: 2ad895a4-90e1-460d-9291-bbfb3463190e, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-381.7KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32002, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-566.0KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32000, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-925.3KB/s(Youtube:不良林), server: 62.210.113.98, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
+  - {name: 🇫🇷 法国-835.9KB/s(Youtube:不良林), server: 62.210.113.98, port: 5001, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇨🇳 台湾-1.96MB/s(Youtube:不良林), server: node-tw-c-01.texo.network, port: 8443, type: trojan, password: 91fc891c-510f-3a1b-aa77-9bee2c759522, sni: node-tw-c-01.texo.network, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-368.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-730.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-233.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-676.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-341.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-485.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-424.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-885.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-454.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-944.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.78MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-381.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-566.0KB/s(Youtube:不良林)
+      - 🇫🇷 法国-925.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-835.9KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.96MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-368.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-730.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-233.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-676.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-341.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-485.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-424.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-885.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-454.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-944.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.78MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-381.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-566.0KB/s(Youtube:不良林)
+      - 🇫🇷 法国-925.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-835.9KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.96MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-368.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-730.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-233.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-676.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-341.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-485.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-424.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-885.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-454.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-944.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.78MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-381.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-566.0KB/s(Youtube:不良林)
+      - 🇫🇷 法国-925.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-835.9KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.96MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇨🇳 台湾-1.96MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-368.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-730.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-233.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-676.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-341.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-485.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-424.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-885.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-454.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-944.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.78MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-381.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-566.0KB/s(Youtube:不良林)
+      - 🇫🇷 法国-925.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-835.9KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.96MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-368.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-730.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-233.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-676.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-341.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-485.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-424.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-885.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-454.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-944.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.78MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-381.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-566.0KB/s(Youtube:不良林)
+      - 🇫🇷 法国-925.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-835.9KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.96MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-368.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-730.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-233.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-676.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-341.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-485.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-424.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-885.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-454.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-944.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.78MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-381.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-566.0KB/s(Youtube:不良林)
+      - 🇫🇷 法国-925.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-835.9KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.96MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-368.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-730.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-233.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-676.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-341.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-485.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-424.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-885.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-454.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-944.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.78MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-381.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-566.0KB/s(Youtube:不良林)
+      - 🇫🇷 法国-925.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-835.9KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.96MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
