--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-478.4KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65091, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
-  - {name: 🇨🇳 中国-350.0KB/s(Youtube:不良林), server: 36.134.156.5, port: 65001, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.156.5}}
-  - {name: 🇨🇳 中国-3.21MB/s(Youtube:不良林), server: in-tw-2.onebox6.org, port: 38201, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-tw-2.onebox6.org}}
-  - {name: 🇨🇳 中国-363.6KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65093, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
-  - {name: 🇺🇸 美国-4.01MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-372.6KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-334.3KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 台湾-6.61MB/s(Youtube:不良林), server: 211.23.149.95, port: 25634, type: trojan, password: a2a37460-2a05-3211-b0d6-d0b37971f84e, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.29MB/s(Youtube:不良林), server: free-node-ar-1.texo.network, port: 8443, type: trojan, password: 91fc891c-510f-3a1b-aa77-9bee2c759522, sni: free-node-ar-1.texo.network, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-471.7KB/s(Youtube:不良林), server: 43.134.229.238, port: 20085, type: vmess, uuid: eb35ce5a-7b4d-4fbc-d23f-a57c74872634, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-352.5KB/s(Youtube:不良林), server: 168.138.214.114, port: 443, type: vmess, uuid: e35159d7-e8fb-479c-b490-e8e9a924e0c6, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /a9S24DC8US, ws-headers: {Host: 168.138.214.114}}
+  - {name: 🇨🇳 中国-342.1KB/s(Youtube:不良林), server: 116.129.254.177, port: 65048, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
+  - {name: 🇨🇳 中国-265.6KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.01MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-362.8KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65067, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-1.13MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇰🇷 韩国-2.57MB/s(Youtube:不良林), server: 13.124.29.75, port: 443, type: ss, cipher: aes-256-cfb, password: amazonskr05}
+  - {name: 🇸🇬 新加坡-800.7KB/s(Youtube:不良林), server: 47.241.220.160, port: 28475, type: vmess, uuid: 5b00ad6f-bc33-4946-8a32-b7e59620e935, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-354.1KB/s(Youtube:不良林), server: in-sg-1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-sg-1.onebox6.org}}
+  - {name: 🇨🇳 中国-4.30MB/s(Youtube:不良林), server: hk-hkg-it2-svm-tr.node.inforun.work, port: 13889, type: trojan, password: uDTmEAGwuCUZXZvwhWJk, sni: hk-hkg-it2-svm-tr.node.inforun.work, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-478.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-350.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.21MB/s(Youtube:不良林)
-      - 🇨🇳 中国-363.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-372.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-334.3KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-6.61MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.29MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-471.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-352.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-342.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-265.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.01MB/s(Youtube:不良林)
+      - 🇨🇳 中国-362.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.57MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-800.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-354.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.30MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-478.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-350.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.21MB/s(Youtube:不良林)
-      - 🇨🇳 中国-363.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-372.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-334.3KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-6.61MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.29MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-471.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-352.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-342.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-265.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.01MB/s(Youtube:不良林)
+      - 🇨🇳 中国-362.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.57MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-800.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-354.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.30MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-478.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-350.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.21MB/s(Youtube:不良林)
-      - 🇨🇳 中国-363.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-372.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-334.3KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-6.61MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.29MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-471.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-352.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-342.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-265.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.01MB/s(Youtube:不良林)
+      - 🇨🇳 中国-362.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.57MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-800.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-354.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.30MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇨🇳 台湾-6.61MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-478.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-350.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.21MB/s(Youtube:不良林)
-      - 🇨🇳 中国-363.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-372.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-334.3KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-6.61MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.29MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-471.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-352.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-342.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-265.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.01MB/s(Youtube:不良林)
+      - 🇨🇳 中国-362.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.57MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-800.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-354.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.30MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-478.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-350.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.21MB/s(Youtube:不良林)
-      - 🇨🇳 中国-363.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-372.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-334.3KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-6.61MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.29MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-471.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-352.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-342.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-265.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.01MB/s(Youtube:不良林)
+      - 🇨🇳 中国-362.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.57MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-800.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-354.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.30MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-478.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-350.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.21MB/s(Youtube:不良林)
-      - 🇨🇳 中国-363.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-372.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-334.3KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-6.61MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.29MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-471.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-352.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-342.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-265.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.01MB/s(Youtube:不良林)
+      - 🇨🇳 中国-362.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.57MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-800.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-354.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.30MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-478.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-350.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.21MB/s(Youtube:不良林)
-      - 🇨🇳 中国-363.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-372.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-334.3KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-6.61MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.29MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-471.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-352.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-342.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-265.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.01MB/s(Youtube:不良林)
+      - 🇨🇳 中国-362.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.57MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-800.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-354.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.30MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
