--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-362.8KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65067, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
-  - {name: 🇸🇬 新加坡-3.69MB/s(Youtube:不良林), server: 43.134.229.238, port: 20085, type: vmess, uuid: eb35ce5a-7b4d-4fbc-d23f-a57c74872634, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-455.8KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32002, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.01MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-282.9KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34001, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 匈牙利-1.30MB/s(Youtube:不良林), server: 185.225.69.134, port: 45081, type: vmess, uuid: 3c3bfd75-dc30-4e76-8940-47e1137e21f9, alterId: 64, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇳🇱 荷兰-3.07MB/s(Youtube:不良林), server: 23.94.120.19, port: 28554, type: vmess, uuid: 4a4c96c5-7b8b-4612-c715-6b91a9c34d07, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.93MB/s(Youtube:不良林), server: 129.146.133.157, port: 51009, type: vmess, uuid: 81714cef-9bde-4a08-aa50-d6bc0172d78b, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-355.4KB/s(Youtube:不良林), server: 116.129.254.177, port: 65077, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
   - {name: 🇺🇸 美国-4.87MB/s(Youtube:不良林), server: 199.115.228.30, port: 253, type: ss, cipher: aes-256-cfb, password: bwhskrskr05}
-  - {name: 🇺🇸 美国-5.30MB/s(Youtube:不良林), server: 23.230.146.254, port: 1258, type: vmess, uuid: edeb41cc-a76a-47f2-fa96-b9141e66a2b0, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇷🇴 罗马尼亚-3.95MB/s(Youtube:不良林), server: 5.183.102.34, port: 37667, type: vmess, uuid: 66f93c8f-4458-41d3-e447-f0b57d893527, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-356.2KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32000, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇰🇷 韩国-546.4KB/s(Youtube:不良林), server: 13.124.29.75, port: 443, type: ss, cipher: aes-256-cfb, password: amazonskr05}
+  - {name: 🇨🇳 中国-490.2KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32001, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-383.4KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65089, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-492.4KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65078, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-317.0KB/s(Youtube:不良林), server: fsyd.kruwik.cn, port: 10641, type: vmess, uuid: 3faa79fc-c39b-338e-9c95-ca0b1c6f9e8c, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /index, ws-headers: {Host: fsyd.kruwik.cn}}
+  - {name: 🇺🇸 美国-335.9KB/s(Youtube:不良林), server: us-05.licom.ml, port: 12501, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: us-05.licom.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-362.8KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.69MB/s(Youtube:不良林)
-      - 🇨🇳 中国-455.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-282.9KB/s(Youtube:不良林)
-      - 匈牙利-1.30MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-3.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.93MB/s(Youtube:不良林)
+      - 🇨🇳 中国-355.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-4.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.30MB/s(Youtube:不良林)
-      - 🇷🇴 罗马尼亚-3.95MB/s(Youtube:不良林)
+      - 🇨🇳 中国-356.2KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-546.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-490.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-383.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-492.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-317.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-335.9KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-362.8KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.69MB/s(Youtube:不良林)
-      - 🇨🇳 中国-455.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-282.9KB/s(Youtube:不良林)
-      - 匈牙利-1.30MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-3.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.93MB/s(Youtube:不良林)
+      - 🇨🇳 中国-355.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-4.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.30MB/s(Youtube:不良林)
-      - 🇷🇴 罗马尼亚-3.95MB/s(Youtube:不良林)
+      - 🇨🇳 中国-356.2KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-546.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-490.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-383.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-492.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-317.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-335.9KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-362.8KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.69MB/s(Youtube:不良林)
-      - 🇨🇳 中国-455.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-282.9KB/s(Youtube:不良林)
-      - 匈牙利-1.30MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-3.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.93MB/s(Youtube:不良林)
+      - 🇨🇳 中国-355.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-4.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.30MB/s(Youtube:不良林)
-      - 🇷🇴 罗马尼亚-3.95MB/s(Youtube:不良林)
+      - 🇨🇳 中国-356.2KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-546.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-490.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-383.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-492.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-317.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-335.9KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-362.8KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.69MB/s(Youtube:不良林)
-      - 🇨🇳 中国-455.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-282.9KB/s(Youtube:不良林)
-      - 匈牙利-1.30MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-3.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.93MB/s(Youtube:不良林)
+      - 🇨🇳 中国-355.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-4.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.30MB/s(Youtube:不良林)
-      - 🇷🇴 罗马尼亚-3.95MB/s(Youtube:不良林)
+      - 🇨🇳 中国-356.2KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-546.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-490.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-383.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-492.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-317.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-335.9KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-362.8KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.69MB/s(Youtube:不良林)
-      - 🇨🇳 中国-455.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-282.9KB/s(Youtube:不良林)
-      - 匈牙利-1.30MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-3.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.93MB/s(Youtube:不良林)
+      - 🇨🇳 中国-355.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-4.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.30MB/s(Youtube:不良林)
-      - 🇷🇴 罗马尼亚-3.95MB/s(Youtube:不良林)
+      - 🇨🇳 中国-356.2KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-546.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-490.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-383.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-492.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-317.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-335.9KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-362.8KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.69MB/s(Youtube:不良林)
-      - 🇨🇳 中国-455.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-282.9KB/s(Youtube:不良林)
-      - 匈牙利-1.30MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-3.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.93MB/s(Youtube:不良林)
+      - 🇨🇳 中国-355.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-4.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.30MB/s(Youtube:不良林)
-      - 🇷🇴 罗马尼亚-3.95MB/s(Youtube:不良林)
+      - 🇨🇳 中国-356.2KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-546.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-490.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-383.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-492.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-317.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-335.9KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-362.8KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.69MB/s(Youtube:不良林)
-      - 🇨🇳 中国-455.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-282.9KB/s(Youtube:不良林)
-      - 匈牙利-1.30MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-3.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.93MB/s(Youtube:不良林)
+      - 🇨🇳 中国-355.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-4.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.30MB/s(Youtube:不良林)
-      - 🇷🇴 罗马尼亚-3.95MB/s(Youtube:不良林)
+      - 🇨🇳 中国-356.2KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-546.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-490.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-383.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-492.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-317.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-335.9KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
